import "AddResponse.proto";
import "AddDependencyResponse.proto";
import "AddSyncDependencyResponse.proto";
import "BulkAddResponse.proto";
import "BulkGetResponse.proto";
import "BulkInsertResponse.proto";
import "BulkRemoveResponse.proto";
import "ClearResponse.proto";
import "ContainResponse.proto";
import "CountResponse.proto";
import "DisposeResponse.proto";
import "GetCacheItemResponse.proto";
import "GetResponse.proto";
import "GetEnumeratorResponse.proto";
import "GetGroupDataResponse.proto";
import "GetGroupKeysResponse.proto";
import "GetHashmapResponse.proto";
import "GetOptimalServerResponse.proto";
import "GetTagResponse.proto";
import "GetTypeMapResponse.proto";
import "InitializeCacheResponse.proto";
import "InsertReponse.proto";
import "RaiseCustomEventResponse.proto";
import "RegisterKeyNotifResponse.proto";
import "RegisterBulkKeyNotifResponse.proto";
import "RegisterNotifResponse.proto";
import "RemoveGroupResponse.proto";
import "LockResponse.proto";
import "RemoveResponse.proto";
import "SearchResponse.proto";
import "SearchEntriesResponse.proto";
import "UnlockResponse.proto";
import "VerifyLockResponse.proto";
import "IsLockedResponse.proto";
import "UnregisterBulkKeyNotifResponse.proto";
import "UnregisterKeyNotifResponse.proto";
import "HybridBulkResponse.proto";
import "GetLoggingInfoResponse.proto";
import "CloseStreamResponse.proto";
import "GetStreamLengthResponse.proto";
import "OpenStreamResponse.proto";
import "WriteToStreamResponse.proto";
import "ReadFromStreamResponse.proto";
import "Exception.proto";

import "CacheClearedEventResponse.proto";
import "HashmapChangedEventResponse.proto";
import "CacheStoppedEventResponse.proto";
import "ConfigModifiedEventResponse.proto";
import "CustomEventResponse.proto";
import "ItemAddedEventResponse.proto";
import "ItemRemovedEventResponse.proto";
import "ItemUpdatedEventResponse.proto";
import "LoggingInfoModifiedEventResponse.proto";
import "NodeJoinedEventResponse.proto";
import "NodeLeftEventResponse.proto";
import "QueueFullEventResponse.proto";
import "AsyncOperationCompletedCallbackResponse.proto";
import "ItemRemoveCallbackResponse.proto";
import "ItemUpdatedCallbackResponse.proto";
import "DSUpdatedCallbackResponse.proto";
import "HeartBeatResponse.proto";
import "RemoveByTagResponse.proto";
import "CQCallbackResponse.proto";
import "UnRegisterCQResponse.proto";
import "RegisterCQResponse.proto";
import "GetKeysByTagResponse.proto";
import "BulkDeleteResponse.proto";
import "DeleteResponse.proto"; 
import "GetNextChunkResponse.proto";
import "GetGroupNextChunkResponse.proto";
import "SearchCQResponse.proto";
import "SearchEntriesCQResponse.proto";
import "AddAttributeResponse.proto";
import "FragmentedResponse.proto";
import "GetRunningServersResponse.proto";
import "BulkEventResponse.proto";
import "SyncEventsResponse.proto";
import "BlockActivityEventResponse.proto";
import "UnBlockActivityEventResponse.proto";
import "RemoveQueryResponse.proto";
import "DeleteQueryResponse.proto";
import "GetProductVersionResponse.proto";
import "GetServerMappingResponse.proto";
import "GetCacheBindingResponse.proto";
import "MapReduceTaskResponse.proto";
import "TaskCallbackResponse.proto";
import "TaskCancelResponse.proto";
import "TaskProgressResponse.proto";
import "GetRunningTasksResponse.proto";
import "GetNextRecordResponse.proto";
import "TaskEnumeratorResponse.proto";
import "InvokeEntryProcessorResponse.proto";
import "InquiryRequestResponse.proto";
import "DisposeReaderResponse.proto";
import "ExecuteReaderResponse.proto";
import "GetReaderChunkResponse.proto";
import "ExecuteReaderCQResponse.proto";
import "GetExpirationResponse.proto";
import "PollResponse.proto";
import "RegisterPollNotifResponse.proto";
import "PollNotifyEventResponse.proto";
import "LCDataResponse.proto";
import "GetConnectedClientsResponse.proto";
import "TouchResponse.proto";
import "GetCacheManagementPortResponse.proto";
import "GetTopicResponse.proto";
import "SubscribeTopicResponse.proto";
import "RemoveTopicResponse.proto";
import "UnSubscribeTopicResponse.proto";
import "MessagePublishResponse.proto";
import "GetMessageResponse.proto";
import "MessageAcknowledgmentResponse.proto";
import "PingResponse.proto";

option java_outer_classname="ResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message Response {

enum Type 
	{
		ADD = 1;
		ADD_DEPENDENCY = 2;
		ADD_SYNC_DEPENDENCY = 3;
		ADD_BULK = 4;
		GET_BULK = 5;
		INSERT_BULK = 6;
		REMOVE_BULK = 7;
		CLEAR = 8;
		CONTAINS = 9;
		COUNT = 10;
		DISPOSE = 11;
		GET_CACHE_ITEM = 12;
		GET = 13;
		GET_ENUMERATOR = 15;
		GET_GROUP_DATA = 16;
		GET_HASHMAP = 17;
		GET_OPTIMAL_SERVER = 18;
		GET_THRESHOLD_SIZE = 19;
		GET_TYPEINFO_MAP = 20;
		INIT = 21;
		INSERT = 22;
		RAISE_CUSTOM_EVENT = 23;
		REGISTER_KEY_NOTIF = 24;
		REGISTER_NOTIF = 25;
		REMOVE = 26;
		REMOVE_GROUP = 27;
		SEARCH = 28;
		GET_TAG = 29;
		LOCK = 30;
		UNLOCK = 31;
		ISLOCKED = 32;
		LOCK_VERIFY = 33;
		UNREGISTER_KEY_NOTIF = 34;	
		UNREGISTER_BULK_KEY_NOTIF = 35;	
		REGISTER_BULK_KEY_NOTIF = 36;
		HYBRID_BULK = 37;
		GET_LOGGING_INFO = 38;
		CLOSE_STREAM = 39;
		GET_STREAM_LENGTH = 40;
		OPEN_STREAM = 41;
		WRITE_TO_STREAM = 42;
		READ_FROM_STREAM = 43;
		
		GET_GROUP_KEYS = 50;	
		SEARCH_ENTRIES = 51;	
		EXCEPTION = 52;
		ASYNC_OP_COMPLETED_CALLBACK = 53;
		ITEM_REMOVED_CALLBACK = 54;
		ITEM_UPDATED_CALLBACK = 55;

		CACHE_CLEARED_EVENT = 57;
		CACHE_STOPPED_EVENT = 58;
		CONFIG_MODIFIED_EVENT = 59;
		CUSTOM_EVENT = 60;
		HASHMAP_CHANGED_EVENT = 61;
		ITEM_ADDED_EVENT = 62;
		ITEM_REMOVED_EVENT = 63;
		ITEM_UPDATED_EVENT = 64;
		LOGGING_INFO_MODIFIED_EVENT = 65;
		NODE_JOINED_EVENT = 66;
		NODE_LEFT_EVENT = 67;
		QUEUE_FULL_EVENT = 68;
		DS_UPDATE_CALLBACK = 69;
		
		HEART_BEAT = 72;
		
		REMOVE_TAG = 74;
		
		CQ_CALLBACK = 76;
		UNREGISTER_CQ = 77;
		REGISTER_CQ = 78;
		
		GET_KEYS_TAG = 81;
		DELETE_BULK = 82;
		DELETE = 83;
		GET_NEXT_CHUNK = 84;
		GET_GROUP_NEXT_CHUNK = 85;
		SEARCH_CQ = 86;
		SEARCH_ENTRIES_CQ = 87;
		ADD_ATTRIBUTE = 88;
		GET_RUNNING_SERVERS = 91;
		BULK_EVENT = 92;
		SYNC_EVENTS = 93;
		BLOCK_ACTIVITY = 94;
		UNBLOCK_ACTIVITY = 95;
		REMOVE_QUERY = 96;
		DELETE_QUERY = 97;
		GET_PRODUCT_VERSION = 98;
		
		RESPONSE_FRAGMENT = 102;
		INQUIRY_REQUEST_RESPONSE = 103;
		GET_SERVER_MAPPING = 104;
		GET_CACHE_BINDING = 105;		
        MAP_REDUCE_TASK = 106;
        TASK_CALLBACK = 107;
        RUNNING_TASKS = 108;
        TASK_PROGRESS = 109;
        CANCEL_TASK = 110;
        TASK_NEXT_RECORD = 111;
        TASK_ENUMERATOR = 112;
		INVOKE_ENTRY_PROCESSOR = 113;
		DISPOSE_READER = 114;
        EXECUTE_READER = 115;
        GET_READER_CHUNK = 116;
		EXECUTE_READER_CQ = 117;
		EXPIRATION_RESPONSE = 118; 
		LC_DATA = 119;
		POLL = 121;
        REGISTER_POLL_NOTIF = 122;
        POLL_NOTIFY_CALLBACK = 123;
		GET_CONNECTED_CLIENTS = 124;
		CLIENT_CONNECTIVITY_EVENT = 125;
		TOUCH = 126;
		GET_CACHE_MANAGEMENT_PORT = 127;
		GET_TOPIC=128;
		SUBSCRIBE_TOPIC=129;
		REMOVE_TOPIC=130;
		UNSUBSCRIBE_TOPIC=131;
		MESSAGE_PUBLISH=132;
		GET_MESSAGE=133;
		MESSAGE_ACKNOWLEDGEMENT=134;
		PING=135;
	}
	
	optional int64 requestId = 1;
	optional Type responseType = 2;
	optional Exception exception = 3;
	optional AddDependencyResponse addDep = 4;
	optional BulkAddResponse bulkAdd = 5;
	optional BulkGetResponse bulkGet = 6;
	optional BulkInsertResponse bulkInsert = 7;
	optional BulkRemoveResponse bulkRemove = 8;
	optional ContainResponse contain = 9;
	optional CountResponse count = 10;
	optional GetCacheItemResponse getItem = 11;
	optional GetResponse get = 12;
	optional GetEnumeratorResponse getEnum = 15;
	optional GetGroupDataResponse getGroupData = 16;
	optional GetGroupKeysResponse getGroupKeys = 17;
	optional GetHashmapResponse getHashmap = 18;
	optional GetOptimalServerResponse getOptimalServer = 19;
	optional GetTagResponse getTag = 20;
	optional GetTypeMapResponse getTypemap = 21;
	optional InitializeCacheResponse initCache = 22;
	optional InsertResponse insert = 23;
	optional LockResponse lockResponse = 24;
	optional VerifyLockResponse lockVerify = 25;
	optional RemoveResponse remove = 26;
	optional SearchResponse search = 27;
	optional SearchEntriesResponse searchEntries = 28;
	optional AddResponse addResponse = 29;
	optional AddSyncDependencyResponse addSyncDependencyResponse = 30;
	optional ClearResponse clearResponse = 31;
	optional DisposeResponse disposeResponse = 32;
	optional RaiseCustomEventResponse raiseCustomEventResponse = 33;
	optional RegisterKeyNotifResponse registerKeyNotifResponse = 34;
	optional RegisterNotifResponse registerNotifResponse = 35;
	optional RemoveGroupResponse removeGroupResponse = 36;
	optional IsLockedResponse isLockedResponse = 37;
	optional UnregisterBulkKeyNotifResponse unregisterBulkKeyNotifResponse = 38;
	optional UnregisterKeyNotifResponse unregisterKeyNotifResponse = 39;
	optional HybridBulkResponse hybridBulkResponse = 40;
	optional GetLoggingInfoResponse getLoggingInfoResponse = 41;
	optional CloseStreamResponse closeStreamResponse = 42;
	optional GetStreamLengthResponse getStreamLengthResponse = 43;
    optional OpenStreamResponse openStreamResponse = 44;
	optional WriteToStreamResponse writeToStreamResponse = 45;
	optional ReadFromStreamResponse readFromStreamResponse = 46;
	optional AsyncOperationCompletedCallbackResponse asyncOpCompletedCallback = 54;
	optional ItemRemoveCallbackResponse itemRemovedCallback = 55;
	optional ItemUpdatedCallbackResponse itemUpdatedCallback = 56;

	optional CacheClearedEventResponse cacheCleared = 58;
	optional CacheStoppedEventResponse cacheStopped = 59;
	optional ConfigModifiedEventResponse configModified = 60;
	optional CustomEventResponse customEvent = 61;
	optional HashmapChangedEventResponse hashmapChanged = 62;
	optional ItemAddedEventResponse itemAdded = 63;
	optional ItemRemovedEventResponse itemRemoved = 64;
	optional ItemUpdatedEventResponse itemUpdated = 65;
	optional LoggingInfoModifiedEventResponse loggingInfoModified = 66;
	optional NodeJoinedEventResponse nodeJoined = 67;
	optional NodeLeftEventResponse nodeLeft = 68;
	optional QueueFullEventResponse queueFullEvent = 69;
	optional UnlockResponse unlockResponse = 70;
	optional RegisterBulkKeyNotifResponse registerBulkKeyNotifResponse = 71;
	optional DSUpdatedCallbackResponse dsUpdateCallbackRespose = 72;

	optional HeartBeatResponse heartBeatResponse = 75;

	optional RemoveByTagResponse removeTagResponse = 77;

	optional CQCallbackResponse cQCallbackResponse = 79;
	optional UnRegisterCQResponse unRegisterCQResponse = 80;
	optional RegisterCQResponse registerCQResponse = 81;

	optional GetKeysByTagResponse getKeysByTagResponse = 84;
	optional BulkDeleteResponse bulkDeleteResponse = 85;
	optional DeleteResponse deleteResponse = 86;
	optional string intendedRecipient = 87;
	optional int32 sequenceId = 88 [default=1];
	optional int32 numberOfChuncks = 89 [default=1];
	optional GetNextChunkResponse getNextChunkResponse = 90;
	optional GetGroupNextChunkResponse getGroupNextChunkResponse = 91;
	optional SearchCQResponse searchCQResponse = 92;
	optional SearchEntriesCQResponse searchEntriesCQResponse = 93;
	optional AddAttributeResponse addAttributeResponse = 94;
	optional GetRunningServersResponse getRunningServer = 97;
	optional BulkEventResponse bulkEventResponse = 98;
	optional SyncEventsResponse syncEventsResponse = 99;
	optional BlockActivityEventResponse blockActivityEvent = 100;
	optional UnBlockActivityEventResponse unblockActivityEvent = 101;
	optional DeleteQueryResponse deleteQueryResponse = 102;
	optional RemoveQueryResponse removeQueryResponse = 103;
	optional GetProductVersionResponse getProductVersionResponse = 104;
	
	optional FragmentedResponse getResponseFragment = 108;
	optional GetServerMappingResponse getServerMappingResponse = 109;	
	optional InquiryRequestResponse inquiryRequestResponse = 110;
	optional int32 commandID = 111;
	optional GetCacheBindingResponse getCacheBindingResponse = 112;
	optional MapReduceTaskResponse mapReduceTaskResponse = 113;
    optional TaskCallbackResponse TaskCallbackResponse = 114;
    optional GetRunningTasksResponse RunningTasksResponse = 115;
    optional TaskCancelResponse TaskCancelResponse = 116;
    optional TaskProgressResponse TaskProgressResponse = 117;
    optional GetNextRecordResponse NextRecordResponse = 118;
    optional TaskEnumeratorResponse TaskEnumeratorResponse = 119;
	optional InvokeEntryProcessorResponse invokeEntryProcessorResponse = 120;
	optional DisposeReaderResponse disposeReaderResponse = 121;
    optional ExecuteReaderResponse executeReaderResponse = 122;
    optional GetReaderChunkResponse getReaderChunkResponse = 123;
	optional ExecuteReaderCQResponse executeReaderCQResponse = 124;
	optional GetExpirationResponse getExpirationResponse = 125; 
    optional LCDataResponse LcDataResponse = 126;
	optional PollResponse pollResponse = 128;
    optional RegisterPollNotifResponse registerPollNotifResponse = 129;
    optional PollNotifyEventResponse pollNotifyEventResponse = 130;
	optional GetConnectedClientsResponse getConnectedClientsResponse=131;
	optional TouchResponse touchResponse = 132;
	optional GetCacheManagementPortResponse getCacheManagementPortResponse = 133;
	optional GetTopicResponse getTopicResponse=134;
	optional SubscribeTopicResponse subscribeTopicResponse=135;
	optional RemoveTopicResponse removeTopicResponse=136;
	optional UnSubscribeTopicResponse unSubscribeTopicResponse=137;
	optional MessagePublishResponse messagePublishResponse=138;
	optional GetMessageResponse getMessageResponse=139;
	optional MessageAcknowledgmentResponse messageAcknowledgmentResponse=140;
	optional PingResponse pingResponse=141;
}

